--- a/src/pages/price-list/freezer-repair-cost.astro
+++ b/src/pages/price-list/freezer-repair-cost.astro
@@ -58,7 +58,7 @@ import "css/price/style_price.css";
             frustration of appliance repairs, and we pride ourselves on our
             transparency and reliability. This page is designed to give you a
             thorough understanding of our pricing policies, the costs associated
-            with fridge repairs, and our unique approach to service.
+            with freezer repairs, and our unique approach to service.
           </p>
 
           <p><b>Have Questions? We’re Here to Help!</b></p>
@@ -68,17 +68,17 @@ import "css/price/style_price.css";
             assisting you and ensuring your satisfaction.
           </p>
 
-          <h2>How Much Does It Cost to Repair a Refrigerator?</h2>
+          <h2>How Much Does It Cost to Repair a Freezer?</h2>
           <p>
-            Discussing the average appliance repair cost is essential when
-            considering the general costs associated with repairing common
-            household appliances. Refrigerator repair costs can vary based on
-            the type of issue as well as the brand and model of your appliance.
-            Our technician will first need to diagnose the problem to provide
-            you with the most accurate estimate. Following the diagnosis, you’ll
-            receive a detailed price breakdown. This helps make an informed
-            decision about whether to repair or replace your refrigerator and
-            includes recommendations should you consider a replacement.
+            The refrigerator repair cost nationally ranges from $200 to $300 on
+            average but can fluctuate from as low as $80 to over $1,000 based on
+            the specific issue, highlighting the cost's dependency on the
+            problem rather than the refrigerator's size or style. Our technician
+            will first need to diagnose the problem to provide you with the most
+            accurate estimate. Following the diagnosis, you’ll receive a
+            detailed price breakdown. This helps make an informed decision about
+            whether to repair or replace your freezer and includes
+            recommendations should you consider a replacement.
           </p>
         </div>
       </div>
@@ -86,12 +86,10 @@ import "css/price/style_price.css";
       <div class="pricing-policy">
         <div class="head_pricing-policy head_pricing-policy_foto">
           <div class="head_pricing-policy_foto-a">
-            <h2>
-              Our Pricing Policy For The Refrigerator Repair And How We Work
-            </h2>
+            <h2>Our Pricing Policy For Freezer Repair And How We Work</h2>
             <p>
-              There are four costs to consider when making your refrigerator
-              work optimally.
+              There are four costs to consider when it comes to making your
+              freezer work optimally.
             </p>
           </div>
 
@@ -149,16 +147,16 @@ import "css/price/style_price.css";
 
             <div class="desc_pricing-policy">
               <p>
-                Regular maintenance is essential for your fridge’s longevity and
-                optimal performance. We recommend annual maintenance, which
+                Regular maintenance is essential for your freezer's longevity
+                and optimal performance. We recommend annual maintenance, which
                 includes thorough cleaning of the condenser coils, inspection of
                 door seals for tightness, and checking the temperature
                 calibration to ensure proper cooling. Our flat fee for this
                 comprehensive service is $80. This preventive approach is not
-                only cost-effective by reducing the need for fridge repair but
+                only cost effective by reducing the need for freezer repair but
                 also enhances the efficiency and lifespan of your appliance.
                 Schedule your maintenance appointment with us today and ensure
-                your fridge runs smoothly.
+                your freezer runs smoothly.
               </p>
             </div>
           </div>
@@ -184,9 +182,9 @@ import "css/price/style_price.css";
 
             <div class="desc_pricing-policy">
               <p>
-                If your refrigerator requires repair, we charge a service fee of
+                If your freezer requires a repair, we charge a service fee of
                 $65, which includes a detailed price breakdown. This fee is
-                waived if you choose to proceed with the fridge repair. Unlike
+                waived if you choose to proceed with the freezer repair. Unlike
                 some companies, we guarantee you will not pay this fee if we
                 cannot diagnose properly. Our technicians are highly trained and
                 equipped with specialized tools to accurately diagnose and
@@ -296,11 +294,11 @@ import "css/price/style_price.css";
             <div class="desc_pricing-policy">
               <p>
                 See prices below. While not every repair needs new parts,
-                certain situations require them to restore your refrigerator to
-                peak performance. Our technicians carry a range of parts in
-                their vehicles, which usually enables same-day repairs. If a
-                part must be ordered, the cost will vary depending on the
-                repair, brand, and model of your fridge.
+                certain situations require them to restore your freezer to peak
+                performance. Our technicians carry a range of parts in their
+                vehicles, which usually enables same-day repairs. If a part must
+                be ordered, the cost will vary depending on the repair, brand,
+                and model of your freezer.
               </p>
             </div>
           </div>
@@ -314,7 +312,7 @@ import "css/price/style_price.css";
           </p>
           <p>
             Understanding the appliance repair cost is crucial for homeowners to
-            make informed decisions about whether to repair or replace their
+            make informed decisions about whether to replace or repair their
             appliances, including refrigerators, dishwashers, washers, and
             dryers.
           </p>
@@ -336,7 +334,7 @@ import "css/price/style_price.css";
         </div>
 
         <div class="head_pricing-policy_foto-a">
-          <h2>Refrigerator Repair Cost - Labor Only Excluding Parts</h2>
+          <h2>Freezer Repair Cost - Labor Only Excluding Parts</h2>
           <p>
             Here are common problems and associated repair costs in Los Angeles:
           </p>
@@ -348,19 +346,19 @@ import "css/price/style_price.css";
           <div class="desk_job-prices">
             <a href="#"
               ><p>
-                The compressor is the heart of your refrigerator's cooling
-                system. A failing compressor is a significant issue and one of
-                the most expensive repairs.
+                The compressor is essential for the cooling cycle, pumping
+                refrigerant through the coils. It's one of the most expensive
+                parts to replace.
               </p></a
             >
             <p>
-              The refrigerator is not cooling, making unusual or excessive
-              noise, or starting and stopping frequently.
+              Freezer not cooling, making loud noises, or cycling too
+              frequently.
             </p>
           </div>
 
           <div class="money_job-prices">
-            <p>600 - 1200$</p>
+            <p>500 - 1000$</p>
           </div>
         </div>
 
@@ -368,129 +366,131 @@ import "css/price/style_price.css";
           <div class="desk_job-prices">
             <a href="#"
               ><p>
-                The thermostat controls the temperature inside the refrigerator.
-                If it fails, it might not trigger the cooling process
-                effectively.
+                This fan circulates cold air throughout the freezer. If it
+                fails, the freezer may not maintain the desired temperature.
               </p></a
             >
             <p>
-              Fridge or freezer section is too warm or too cold, temperature
+              Freezer is cool but not cold enough, or there's uneven cooling
+              with frost building up in some areas more than others.
+            </p>
+          </div>
+
+          <div class="money_job-prices">
+            <p>100 - 250$</p>
+          </div>
+        </div>
+
+        <div class="content_job-prices" id="col-prices">
+          <div class="desk_job-prices">
+            <a href="#"
+              ><p>
+                The thermostat monitors and regulates the temperature inside the
+                freezer.
+              </p></a
+            >
+            <p>
+              Freezer not maintaining the set temperature, running continuously,
+              or not running at all.
+            </p>
+          </div>
+
+          <div class="money_job-prices">
+            <p>85 - 200$</p>
+          </div>
+        </div>
+
+        <div class="content_job-prices">
+          <div class="desk_job-prices">
+            <a href="#"
+              ><p>
+                The defrost heater prevents ice from accumulating on the
+                freezer’s evaporator coils by melting the frost during the
+                defrost cycle.
+              </p></a
+            >
+            <p>Excessive frost buildup inside the freezer compartment.</p>
+          </div>
+
+          <div class="money_job-prices">
+            <p>100 - 250$</p>
+          </div>
+        </div>
+
+        <div class="content_job-prices" id="col-prices">
+          <div class="desk_job-prices">
+            <a href="#"
+              ><p>
+                A faulty door seal can lead to cold air leaking out, reducing
+                efficiency and effectiveness.
+              </p></a
+            >
+            <p>
+              Frost buildup near the door, energy waste, or the freezer seems to
+              run constantly.
+            </p>
+          </div>
+
+          <div class="money_job-prices">
+            <p>85 - 150$</p>
+          </div>
+        </div>
+
+        <div class="content_job-prices">
+          <div class="desk_job-prices">
+            <a href="#"
+              ><p>
+                The start relay helps the compressor begin operating. A faulty
+                relay can prevent the freezer from cooling.
+              </p></a
+            >
+            <p>
+              Freezer not starting, intermittent operation, or making clicking
+              sounds.
+            </p>
+          </div>
+
+          <div class="money_job-prices">
+            <p>85 - 150$</p>
+          </div>
+        </div>
+
+        <div class="content_job-prices" id="col-prices">
+          <div class="desk_job-prices">
+            <a href="#"
+              ><p>
+                The control board governs the major electrical functions of the
+                freezer. If it fails, it can affect many aspects of the
+                freezer's operation.
+              </p></a
+            >
+            <p>
+              Freezer not functioning correctly, erratic behaviors, or
+              electronic components not responding.
+            </p>
+          </div>
+
+          <div class="money_job-prices">
+            <p>150 - 400$</p>
+          </div>
+        </div>
+
+        <div class="content_job-prices">
+          <div class="desk_job-prices">
+            <a href="#"
+              ><p>
+                This sensor monitors the internal temperature and signals the
+                control board to adjust cooling.
+              </p></a
+            >
+            <p>
+              Freezer not maintaining the correct temperature, or temperature
               fluctuations.
             </p>
           </div>
 
           <div class="money_job-prices">
-            <p>100 - 300$</p>
-          </div>
-        </div>
-
-        <div class="content_job-prices" id="col-prices">
-          <div class="desk_job-prices">
-            <a href="#"
-              ><p>
-                The evaporator fan circulates cold air from the freezer to the
-                fridge compartment. If this fan fails, the fridge may not cool
-                adequately.
-              </p></a
-            >
-            <p>
-              Poor cooling in the fridge section but freezer works fine, noisy
-              operation.
-            </p>
-          </div>
-
-          <div class="money_job-prices">
-            <p>100 - 250$</p>
-          </div>
-        </div>
-
-        <div class="content_job-prices">
-          <div class="desk_job-prices">
-            <a href="#"
-              ><p>
-                The condenser fan cools the compressor and condenser coils. If
-                it's not working, the fridge can overheat or stop cooling.
-              </p></a
-            >
-            <p>
-              Refrigerator overheating, loud noise from the refrigerator back.
-            </p>
-          </div>
-
-          <div class="money_job-prices">
-            <p>100 - 250$</p>
-          </div>
-        </div>
-
-        <div class="content_job-prices" id="col-prices">
-          <div class="desk_job-prices">
-            <a href="#"
-              ><p>
-                The defrost heater prevents frost from accumulating in the
-                freezer. Failure can lead to a build-up of ice and affect
-                cooling.
-              </p></a
-            >
-            <p>
-              Frost buildup in the freezer, freezer works but fridge section is
-              warm.
-            </p>
-          </div>
-
-          <div class="money_job-prices">
-            <p>100 - 200$</p>
-          </div>
-        </div>
-
-        <div class="content_job-prices">
-          <div class="desk_job-prices">
-            <a href="#"
-              ><p>
-                A damaged door seal can allow cool air to escape, making your
-                fridge work harder and increasing energy consumption.
-              </p></a
-            >
-            <p>Condensation or frost buildup near the door, energy waste.</p>
-          </div>
-
-          <div class="money_job-prices">
             <p>85 - 150$</p>
-          </div>
-        </div>
-
-        <div class="content_job-prices" id="col-prices">
-          <div class="desk_job-prices">
-            <a href="#"
-              ><p>
-                This valve opens to supply water to the refrigerator's ice maker
-                and dispenser. If it fails, these features won't work.
-              </p></a
-            >
-            <p>Ice maker not making ice, water dispenser not working.</p>
-          </div>
-
-          <div class="money_job-prices">
-            <p>85 - 150$</p>
-          </div>
-        </div>
-
-        <div class="content_job-prices">
-          <div class="desk_job-prices">
-            <a href="#"
-              ><p>
-                The control board is the refrigerator's brain, directing
-                electrical power to various components. Malfunctions here can
-                affect many aspects of operation.
-              </p></a
-            >
-            <p>
-              The fridge is not running cycles properly, and the erratic
-              behavior of the fridge functions.
-            </p>
-          </div>
-
-          <div class="money_job-prices">
-            <p>200 - 400$</p>
           </div>
         </div>
       </div>
@@ -500,11 +500,11 @@ import "css/price/style_price.css";
     <div class="job-prices" id="parts-cost-anchor">
       <div class="head_pricing-policy head_pricing-policy_foto">
         <div class="head_pricing-policy_foto-a">
-          <h2>Refrigerator Replacement Parts Cost.</h2>
+          <h2>Freezer Replacement Parts Cost.</h2>
           <p>
-            The cost of replacement parts may vary depending on the
-            refrigerator. The specific part, make and model. Here is an
-            approximate range for some parts.
+            Freezer replacement parts can vary significantly in cost depending
+            on the specific part needed. The search results provide some
+            examples of common freezer parts and their prices:
           </p>
         </div>
 
