--- a/src/components/css-components/style-btn.css
+++ b/src/components/css-components/style-btn.css
@@ -95,7 +95,7 @@
   text-indent: 0px;
   text-shadow: none;
   align-items: center;
-  overflow: auto;
+  overflow: hidden;
   max-width: 145px;
   justify-self: center;
   white-space: nowrap;
