--- a/src/pages/price-list/freezer-repair-cost.astro
+++ b/src/pages/price-list/freezer-repair-cost.astro
@@ -1360,9 +1360,270 @@ import "css/price/style_price.css";
         </p>
       </div>
 
+      <div class="FAQ">
+        <div class="fa">
+          <h3>How can I maximize the lifespan of my freezer?</h3>
+        </div>
+
+        <div class="fa_plus">︾</div>
+
+        <div class="fa_minus">︽</div>
+      </div>
+
+      <div class="questions">
+        <p>
+          <b>To maximize your freezer's lifespan and efficiency:</b>
+        </p>
+        <p>
+          - Maintain proper temperature, ideally between 0°F and -10°F (-18°C
+          and -23°C).
+        </p>
+        <p>- Defrost regularly to prevent ice buildup.</p>
+        <p>- Clean the interior with mild detergent and warm water.</p>
+        <p>- Organize contents for even cooling and airflow.</p>
+        <p>- Check and replace worn door seals.</p>
+        <p>- Allow space around the freezer for ventilation.</p>
+        <p>- Clean condenser coils annually to remove dust.</p>
+        <p>- Monitor temperature settings and performance.</p>
+        <p>- Avoid overloading to prevent strain on components.</p>
+        <p>- Consider professional maintenance annually.</p>
+      </div>
+
+      <div class="FAQ">
+        <div class="fa">
+          <h3>Can I repair my freezer myself?</h3>
+        </div>
+
+        <div class="fa_plus">︾</div>
+
+        <div class="fa_minus">︽</div>
+      </div>
+
+      <div class="questions">
+        <p>
+          Repairing your freezer yourself can be risky, especially if you lack
+          experience or knowledge of appliance repair. Some simple fixes, like
+          replacing a worn door seal or cleaning coils, may be feasible.
+          However, more complex issues involving electrical components or
+          coolant systems should be left to trained professionals to avoid
+          damage or injury. Always prioritize safety and consider hiring a
+          qualified appliance repair specialist for challenging repairs. At the
+          Same Day appliance repair, we make it easier on the customer and only
+          charger $65 service fee. Service fee is waved if you decide to repair.
+          Freezer costs cab be very hight and frequently they are worth to
+          repair. Our company strives to keep all of your home appliances run
+          smoothly.
+        </p>
+      </div>
+
+      <div class="FAQ">
+        <div class="fa">
+          <h3>What should I do if my freezer is leaking water?</h3>
+        </div>
+
+        <div class="fa_plus">︾</div>
+
+        <div class="fa_minus">︽</div>
+      </div>
+
+      <div class="questions">
+        <p>
+          When it comes to freezers, most repairs are associated with freezer
+          leaking water. If your freezer is leaking water, here are some steps
+          you can take to address the issue:
+        </p>
+        <p>
+          <b>Check the Drain Pan: </b>Ensure that the drain pan, located at the
+          bottom of the freezer, is not cracked or out of place. If it's
+          damaged, it may need to be replaced.
+        </p>
+        <p>
+          <b> Inspect the Drain Line: </b> Examine the drain line for any clogs or
+          blockages. Use a pipe cleaner or a small brush to clear any debris that
+          may be obstructing the flow of water.
+        </p>
+        <p>
+          <b>Level the Freezer: </b> Make sure the freezer is sitting level on the
+          ground. If it's tilted or uneven, water may not drain properly and could
+          leak out.
+        </p>
+        <p>
+          <b>Clean the Defrost Drain: </b> If your freezer has a defrost drain, it
+          may become clogged with ice or debris over time. Thoroughly clean the defrost
+          drain to ensure proper drainage.
+        </p>
+        <p>
+          <b>Check the Door Seal: </b> A faulty door seal can allow warm air to enter
+          the freezer, leading to excessive condensation and water leakage. Inspect
+          the door seal for any signs of damage or wear and replace it if necessary.
+        </p>
+        <p>
+          <b>Monitor the Temperature: </b> Ensure that the freezer is maintaining
+          the correct temperature. If it's too warm, it may cause excess frost buildup,
+          which can eventually melt and result in water leakage.
+        </p>
+        <p>
+          <b>Seek Professional Help: </b> If you've tried these troubleshooting steps
+          and the problem persists, it may be a more serious issue that requires
+          professional attention. Contact a qualified appliance repair person to
+          diagnose and repair the problem.
+        </p>
+        <br />
+        <p>
+          Addressing water leakage promptly can help prevent damage to your
+          freezer and surrounding areas. If you're unsure about how to proceed
+          or if the issue seems complex, it's best to seek professional
+          assistance.
+        </p>
+      </div>
+
+      <div class="FAQ">
+        <div class="fa">
+          <h3>Is it normal for my freezer to run continuously?</h3>
+        </div>
+
+        <div class="fa_plus">︾</div>
+
+        <div class="fa_minus">︽</div>
+      </div>
+
+      <div class="questions">
+        <p>
+          Freezers typically cycle on and off to maintain the set temperature.
+          However, if your freezer is running continuously without cycling off,
+          it could indicate a problem. Possible causes include incorrect
+          temperature settings, dirty coils, a faulty door seal, overloading, or
+          a malfunctioning thermostat. If unsure, consult a professional for
+          diagnosis and repair.
+        </p>
+      </div>
+
+      <div class="FAQ">
+        <div class="fa">
+          <h3>
+            What are the key factors that influence appliance repair costs, and
+            how can I determine if repairing my appliance is a more
+            cost-effective choice than replacing it?
+          </h3>
+        </div>
+
+        <div class="fa_plus">︾</div>
+
+        <div class="fa_minus">︽</div>
+      </div>
+
+      <div class="questions">
+        <p>
+          Discussing the average appliance repair cost is essential when
+          considering the general costs associated with repairing common
+          household appliances. Appliance repair costs can vary significantly
+          depending on factors such as the brand and model of the appliance, as
+          well as its age and accessibility for the repair specialist. Freezer
+          repair costs can vary based on the type of issue, as well as the brand
+          and model of your appliance. Comparatively, fridge repair cost
+          averages around $250, but with additional service charges, the final
+          bill could reach up to $450, making it sometimes more cost-effective
+          to consider a replacement. Labor costs, including hourly rates for the
+          technician's time and service call fees, significantly contribute to
+          the overall repair cost, especially when considering the need for EPA
+          compliance and the accessibility of the appliance for repair.
+        </p>
+      </div>
+
+      <div class="FAQ">
+        <div class="fa">
+          <h3>
+            What are common issues in freezer repair, and how do the repair
+            costs compare for different types of freezers?
+          </h3>
+        </div>
+
+        <div class="fa_plus">︾</div>
+
+        <div class="fa_minus">︽</div>
+      </div>
+
+      <div class="questions">
+        <p>
+        Common issues in freezer repair include excessive frost buildup, malfunctioning ice makers, and failures in the defrost motor or control panel. The cost to repair these issues can vary depending on the type of freezer—upright freezers, chest freezers, and portable freezers each have unique components and configurations that might influence repair strategies and costs. For instance, an upright freezer might require more expensive repairs due to their complex shelving and electrical control mechanisms.
+        </p>
+        <p>The average repair costs for freezers generally depend on the specific problem and the local cost of appliance repair technicians. A service call typically includes a diagnostic fee, which covers the initial assessment of the problem. For major issues like compressor replacement, the costs can be quite high, potentially making replacement a more viable option, especially if the freezer is older or out of warranty. It's useful to compare these repair costs with refrigerator repair costs, as they can sometimes overlap, especially in units with combined fridge-freezer functions.</p>
+      </div>
+
+      <div class="FAQ">
+        <div class="fa">
+          <h3>When should I consider replacing my freezer instead of repairing it, and how do home warranties impact this decision?</h3>
+        </div>
+
+        <div class="fa_plus">︾</div>
+
+        <div class="fa_minus">︽</div>
+      </div>
+
+      <div class="questions">
+        <p>
+        Deciding whether to repair or replace a freezer often depends on the cost of repairs relative to the price of a new refrigerator or freezer. Expensive repairs such as compressor replacement or fixing a faulty control panel can make purchasing a new appliance more cost-effective, particularly if the current unit is nearing the end of its manufacturer's warranty or has required multiple costly repairs in the past.
+        </p>
+        <p>Warranties can significantly impact this decision. If your freezer is covered under a home warranty, some or all of the repair costs might be covered, making repairs more economically feasible. A home warranty typically covers essential appliances like freezers, and this coverage can mitigate the financial burden of appliance repair. Always check the terms of your home warranty to understand what is covered and any potential limits on coverage.</p>
+        <p>In both scenarios, it’s important to weigh the average repair cost against the replacement costs. If your appliance repair technicians charge high fees or if the freezer has recurrent issues, it might be more sensible to invest in a new, more reliable model. Always consider the efficiency, features, and warranty options of new freezer ranges before making a final decision.</p>
+      </div>
+
+      <div class="FAQ">
+        <div class="fa">
+          <h3>What are some signs that indicate a need for immediate freezer repair, and what should homeowners do when they notice these signs?</h3>
+        </div>
+
+        <div class="fa_plus">︾</div>
+
+        <div class="fa_minus">︽</div>
+      </div>
+
+      <div class="questions">
+        <p>
+          Key signs that your freezer needs immediate attention include unusual noises, frequent temperature fluctuations, and visible frost build-up beyond normal levels. If the freezer starts making loud humming or clicking noises, it could indicate a problem with the compressor or other mechanical components. Temperature inconsistency, where the freezer fails to maintain a stable temperature, can signal issues with the thermostat or coolant system. Excessive frost build-up may suggest a failing defrost motor or issues with the freezer's door seal.
+        </p>
+        <p>When noticing any of these signs, homeowners should first check for simple solutions such as ensuring the freezer is not overloaded and that the door seals are clean and intact. If the problem persists, it's advisable to contact a professional appliance repair technician to diagnose and resolve the issue to prevent further damage or inefficiency that could lead to higher energy costs and spoiled food.</p>
+      </div>
+
+      <div class="FAQ">
+        <div class="fa">
+          <h3>How do energy efficiency considerations affect the decision to repair or replace a freezer, and what financial incentives might influence this choice?</h3>
+        </div>
+
+        <div class="fa_plus">︾</div>
+
+        <div class="fa_minus">︽</div>
+      </div>
+
+      <div class="questions">
+        <p>
+          Energy efficiency is a critical factor in deciding whether to repair or replace a freezer. Older freezers generally consume more energy than newer models designed with advanced energy-saving technologies. Repairing an old freezer might not be the most cost-effective solution if it continues to incur high energy costs.
+        </p>
+        <p>Homeowners should consider the potential energy savings from newer models, which could offset the initial expense of replacement over time. Additionally, many local utilities and government programs offer rebates and incentives for purchasing energy-efficient appliances, which can further reduce the net cost of an upgrade.</p>
+        <p>When evaluating the decision, compare the estimated energy costs of continuing to operate an old freezer versus the energy costs of a new model, taking into account any available incentives. This analysis will provide a clearer picture of the long-term savings and environmental benefits of upgrading to a more efficient appliance.</p>
+      </div>
+
+      <div class="FAQ">
+        <div class="fa">
+          <h3>How much does it cost to repair the ice maker in an upright freezer, and how does this compare to typical fridge repair costs?</h3>
+        </div>
+
+        <div class="fa_plus">︾</div>
+
+        <div class="fa_minus">︽</div>
+      </div>
+
+      <div class="questions">
+        <p>
+         Repairing an ice maker in an upright freezer can vary in cost depending on the nature of the problem and the model of the freezer. Generally, the cost to fix an ice maker can range from relatively affordable minor repairs to more costly replacements of major components. For an upright freezer, you might expect to pay anywhere from $100 to $400. This variation in cost depends on whether the issue is with the electrical components, water supply lines, or the ice-making mechanism itself.
+        </p>
+        <p>Comparatively, fridge repair costs can cover a wide spectrum but are often in a similar range. However, repairs related to the refrigerator's cooling system or electronic control panels might be more expensive than those for an ice maker. When considering how much it costs to repair a fridge versus an upright freezer's ice maker, it's important to also consider the age and efficiency of the appliance, as newer models might be more cost-effective to repair due to the availability of parts and improved energy efficiency.</p>
+        <p>In both cases, evaluating how much it costs to repair these issues is crucial. If the cost approaches or exceeds half the price of replacing the appliance with a new model, it might be more economical to invest in a new appliance. This decision should also consider the potential energy savings and enhanced features of newer models.</p>
+      </div>
+
       <div class="FAQ_bottom"></div>
+      <Btn />
     </div>
-    <Btn />
   </Container>
+  <Cta />
 </Layout>
-<Cta />
